2007-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* DSATest.cs: Add test case where we import a key that has a null Y
	(public part) but where X (private part) is available - and usable
	to compute Y.

2007-03-22  Sebastien Pouliot  <sebastien@ximian.com> 

	* CryptoConfigTest.cs: Fix upper/lower/mixed cases tests as they work 
	only for 2.0.
	* CryptoStreamTest.cs: Fixed some test cases to work properly on MS
	fx 2.0.
	* DSACryptoServiceProviderTest.cs: Normalize line endings.
	* PasswordDeriveBytesTest.cs: Fix test case that used Reset (as the 
	method was fixed to reset the state in fx 2.0).
	* Rfc2898DeriveBytesTest.cs: Add test case to trigger an endian bug.
	* RSACryptoServiceProviderTest.cs: Normalize line endings.
	* SymmetricAlgorithmTransformTest.cs: Change/split test cases so that
	they work properly under both MS 1.1 and 2.0. In some cases tests are
	marked as NotWorking because Mono implements the, more consistent, 2.0
	behavior for all transforms.

2007-03-15 Roei Erez <roeie@mainsoft.com>

	* Adding some TARGET_JVM tags.
	
2007-03-05  Sebastien Pouliot  <sebastien@ximian.com>

	* SymmetricAlgorithmTransformTest.cs: Add test cases for #81008 by
	looking at the encrypted/decrypted block length when TransformBlock is
	called with different MoO and paddings.

2007-02-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* HashAlgorithmTest.cs: Convert to NUnit 2.2 format.
	* HMACMD5Test.cs: Convert to NUnit 2.2 format.
	* HMACRIPEMD160Test.cs: Convert to NUnit 2.2 format.
	* HMACSHA1Test.cs: Convert to NUnit 2.2 format.
	* HMACSHA256Test.cs: Convert to NUnit 2.2 format.
	* HMACSHA384Test.cs: Convert to NUnit 2.2 format. Add test cases from
	RFC4231 using the correct block size (128) and the "legacy" size (64).
	* HMACSHA512Test.cs: Convert to NUnit 2.2 format. . Add test cases from
	RFC4231 using the correct block size (128) and the "legacy" size (64).
	* KeyedHashAlgorithmTest.cs: Convert to NUnit 2.2 format.