@@ -966,7 +966,6 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
-	[Category ("NotWorking")]
 	public void ExportCspBlob_Full ()
 	{
 		dsa = new DSACryptoServiceProvider (minKeySize);
@@ -978,7 +977,6 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
-	[Category ("NotWorking")]
 	public void ExportCspBlob_PublicOnly ()
 	{
 		dsa = new DSACryptoServiceProvider (minKeySize);
@@ -991,7 +989,6 @@ public class DSACryptoServiceProviderTest : Assertion {
 
 	[Test]
 	[ExpectedException (typeof (CryptographicException))]
-	[Category ("NotWorking")]
 	public void ExportCspBlob_MissingPrivateKey ()
 	{
 		dsa = new DSACryptoServiceProvider (minKeySize);
@@ -1002,7 +999,6 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
-	[Category ("NotWorking")]
 	public void ExportCspBlob_MissingPrivateKey_PublicOnly ()
 	{
 		dsa = new DSACryptoServiceProvider (minKeySize);
@@ -1014,7 +1010,6 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
-	[Category ("NotWorking")]
 	public void ImportCspBlob_Keypair ()
 	{
 		byte[] blob = new byte [336] { 0x07, 0x02, 0x00, 0x00, 0x00, 0x22, 0x00, 0x00, 0x44, 0x53, 0x53, 0x32, 0x00, 0x04, 0x00, 0x00, 0xD3,
@@ -1042,7 +1037,6 @@ public class DSACryptoServiceProviderTest : Assertion {
 	}
 
 	[Test]
-	[Category ("NotWorking")]
 	public void ExportCspBlob_PublicKey ()
 	{
 		byte[] blob = new byte [444] { 0x06, 0x02, 0x00, 0x00, 0x00, 0x22, 0x00, 0x00, 0x44, 0x53, 0x53, 0x31, 0x00, 0x04, 0x00, 0x00, 0xD3, 
@@ -1084,7 +1078,6 @@ public class DSACryptoServiceProviderTest : Assertion {
 
 	[Test]
 	[ExpectedException (typeof (CryptographicException))]
-	[Category ("NotWorking")]
 	public void ImportCspBlob_Bad ()
 	{
 		byte[] blob = new byte [148]; // valid size for public key
